Fix spacing between the title and the job description

--- a/styles/cover.scss
+++ b/styles/cover.scss
@@ -1,4 +1,6 @@
 .name {
+    padding-bottom: 1rem;
+
     display: flex;
     align-items: center;
     word-spacing: 0;
